Fixed vertical alignment between input and button

--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ input[type=text]:focus {
   background-color: var(--colorInputButton);
   border-radius: 0 50px 50px 0; /* top-left, top-right, bottom-right, bottom-left */
   padding: 10px 20px;
+  padding-bottom: 8px;
   margin: 0;
   cursor: pointer; /* Changes the cursor to a pointer on hover */
   height: 50px;
